Updated by task 'AUTO_TM_MT_1698707493384'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/0ac98d61be7e66e9e8378cbc3d878989c22390a5

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,11 @@
 ---
 title: Notas de versão da Adobe Experience Platform
-description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: 49a04ffa059a73678cec10d2475a83e137ecb603
+description: As notas de versão de julho de 2023 da Adobe Experience Platform.
+exl-id: f9fded71-8ce4-47bc-81e8-22b2482e6283
+source-git-commit: b4334b4f73428f94f5a7e5088f98e2459afcaf3c
 workflow-type: tm+mt
 source-wordcount: '1804'
-ht-degree: 38%
+ht-degree: 100%
 
 ---
 
@@ -20,7 +21,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 - [Destinos](#destinations)
 - [Query Service](#query-service)
 - [Serviço de segmentação](#segmentation)
-- [Fontes](#sources)
+- [Origens](#sources)
 - [Experience Data Model (XDM)](#xdm)
 
 ## Serviço de catálogo {#catalog-service}
@@ -29,11 +30,11 @@ O Serviço de catálogo é o sistema de registro para localização e linhagem d
 
 | Recurso | Descrição |
 | --- | --- |
-| Gerenciamento de inventário do conjunto de dados | A interface do usuário de conjuntos de dados agora oferece uma coleção de ações em linha para gerenciar melhor seus conjuntos de dados. O gerenciamento avançado de conjuntos de dados melhora a eficiência do seu trabalho por meio da criação e atribuição de pastas e tags aos seus conjuntos de dados, o que permite filtrar e melhorar a capacidade de descoberta. Consulte a documentação para obter mais informações sobre [ações embutidas](../../catalog/datasets/user-guide.md#inline-actions), como [pesquisar e filtrar conjuntos de dados](../../catalog/datasets/user-guide.md#search-and-filter), e [mover conjuntos de dados para pastas](../../catalog/datasets/user-guide.md#move-to-folders). |
+| Gerenciamento de inventário do conjunto de dados | A interface dos conjuntos de dados agora oferece várias ações em linha para gerenciar melhor seus conjuntos de dados. O gerenciamento avançado de conjuntos de dados torna o seu trabalho mais eficiente por meio da criação e atribuição de pastas e tags, o que permite filtrar e melhorar a capacidade de descoberta. Consulte a documentação para obter mais informações sobre [ações em linha](../../catalog/datasets/user-guide.md#inline-actions), como [pesquisar e filtrar conjuntos de dados](../../catalog/datasets/user-guide.md#search-and-filter) e [mover conjuntos de dados para pastas](../../catalog/datasets/user-guide.md#move-to-folders). |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o Serviço de Catálogo, consulte [Visão geral do Serviço de catálogo](../../catalog/home.md).
+Para obter mais informações sobre o serviço de catálogo, consulte a [visão geral do serviço de catálogo](../../catalog/home.md).
 
 ## Coleção de dados {#data-collection}
 
@@ -43,12 +44,12 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 
 | Tipo | Recurso | Descrição |
 | --- | --- | --- |
-| Tags e encaminhamento de eventos | Logs de auditoria da coleção de dados | Agora você pode ver quando uma ação foi executada e quem executou essa ação em Tags e no Encaminhamento de eventos. Isso facilita a solução de problemas do produto, o controle adequado e as atividades de auditoria interna. Esses dados de auditoria são exibidos por meio de menus deslizantes no contexto que também incluem ações rápidas e atualizações de status de recursos. Esses dados estão disponíveis na interface das Tags e do Encaminhamento de eventos nas seguintes telas:<br><ul><li>[Visão geral da propriedade](../../tags/ui/event-forwarding/overview.md#properties)</li><li>[Regras](../../tags/ui/event-forwarding/overview.md#rules)</li><li>[Elementos de dados](../../tags/ui/event-forwarding/overview.md#data-elements)</li><li>[Extensões](../../tags/ui/event-forwarding/overview.md#extensions)</li><li>[Revisão da biblioteca](https://experienceleague.adobe.com/docs/platform-learn/data-collection/tags/build-and-publish-a-library.html)</li><li>[Última build e publicação da biblioteca](https://experienceleague.adobe.com/docs/platform-learn/data-collection/tags/build-and-publish-a-library.html)</li></ul> |
-| Datastreams | [Pesquisa geográfica](../../datastreams/configure.md#advanced-options) | Agora é possível configurar a geolocalização e a pesquisa de rede para que os fluxos de dados incluam informações como: <ul><li>País</li><li>Código postal</li><li>Estado/Província</li><li>DMA</li><li>Cidade</li><li>Latitude </li><li>Longitude</li><li>Operadora</li><li>Domain</li><li>ISP</li></ul> Você é responsável por garantir que obteve todas as permissões, consentimentos, autorizações e a autorização necessários, exigidos pelas leis e regulamentos aplicáveis, para coletar, processar e transmitir dados pessoais, incluindo informações precisas de geolocalização. <br> A seleção de ofuscação do endereço IP não afeta o nível de informações de geolocalização que serão derivadas do endereço IP e enviadas para as soluções de Adobe configuradas. As pesquisas de geolocalização devem ser limitadas ou desabilitadas separadamente. <br> Consulte a [documentação dos datastreams](../../datastreams/configure.md#advanced-options) para obter mais detalhes. |
+| Tags e encaminhamento de eventos | Logs de auditoria da coleção de dados | Agora você pode ver quando uma ação foi executada e quem a executou nas tags e no encaminhamento de eventos. Isso facilita a solução de problemas do produto, a governança adequada e as atividades de auditoria interna. Esses dados de auditoria são exibidos por meio de menus deslizantes de contexto que também incluem ações rápidas e atualizações de status de recursos. Esses dados estão disponíveis na interface das tags e do encaminhamento de eventos nas seguintes telas:<br><ul><li>[Visão geral da propriedade](../../tags/ui/event-forwarding/overview.md#properties)</li><li>[Regras](../../tags/ui/event-forwarding/overview.md#rules)</li><li>[Elementos de dados](../../tags/ui/event-forwarding/overview.md#data-elements)</li><li>[Extensões](../../tags/ui/event-forwarding/overview.md#extensions)</li><li>[Revisão da biblioteca](https://experienceleague.adobe.com/docs/platform-learn/data-collection/tags/build-and-publish-a-library.html?lang=pt-BR)</li><li>[Última build e publicação da biblioteca](https://experienceleague.adobe.com/docs/platform-learn/data-collection/tags/build-and-publish-a-library.html?lang=pt-BR)</li></ul> |
+| Sequências de dados | [Pesquisa geográfica](../../datastreams/configure.md#advanced-options) | Agora é possível configurar a geolocalização e a pesquisa de rede para que as sequências de dados incluam informações como: <ul><li>País</li><li>Código postal</li><li>Estado/Província</li><li>DMA</li><li>Cidade</li><li>Latitude </li><li>Longitude</li><li>Operadora</li><li>Domínio</li><li>ISP</li></ul> Você é responsável por garantir que foram obtidas todas as permissões, consentimentos, liberações e autorizações necessários, exigidos pelas leis e regulamentos aplicáveis, para coletar, processar e transmitir dados pessoais, incluindo informações precisas de geolocalização. <br> A seleção de ofuscação do endereço IP não afeta o nível de informações de geolocalização que serão derivadas do endereço IP e enviadas para as soluções da Adobe configuradas. As pesquisas de geolocalização devem ser limitadas ou desabilitadas separadamente. <br> Consulte a [documentação das sequências de dados](../../datastreams/configure.md#advanced-options) para obter mais informações. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre a coleta de dados, leia o [visão geral das coleções de dados](../../tags/home.md).
+Para obter mais informações sobre a coleção de dados, leia a [visão geral das coleções de dados](../../tags/home.md).
 
 ## Preparação de dados {#data-prep}
 
@@ -58,7 +59,7 @@ A preparação de dados permite que os engenheiros de dados mapeiem, transformem
 
 | Recurso | Descrição |
 | --- | --- |
-| Novas funções do mapeador | Agora é possível usar as seguintes funções ao mapear objetos no Preparo de dados: <ul><li>`map_get_values`</li><li>`map_has_keys`</li><li>`add_to_map`</li></ul> Para obter mais informações sobre essas funções, leia a [Guia de funções do Preparo de dados](../../data-prep/functions.md#hierarchies---objects). |
+| Novas funções do mapeador | Agora é possível usar as seguintes funções ao mapear objetos durante o preparo de dados: <ul><li>`map_get_values`</li><li>`map_has_keys`</li><li>`add_to_map`</li></ul> Para obter mais informações, leia o [guia de funções do preparo de dados](../../data-prep/functions.md#hierarchies---objects). |
 
 {style="table-layout:auto"}
 
@@ -72,31 +73,31 @@ Para obter mais informações sobre a preparação de dados, leia a [Visão gera
 
 | Destino | Novo ou atualizado | Descrição |
 | ----------- |----------------|----------- |
-| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | Novo | Integrar identidades do Adobe Experience Platform no [!DNL LiveRamp Connect] para poder direcionar os usuários em dispositivos móveis, Web aberta, redes sociais e [!DNL CTV] plataformas, usando o [!DNL Ramp ID] identificador. |
-| [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | [!DNL Data Landing Zone] é um [!DNL Azure Blob] interface de armazenamento de dados provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos da plataforma. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| [[!DNL Amazon S3] update](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| [[!DNL Azure Blob] update](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| [[!DNL SFTP] update](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
-| Conexão com o [[!DNL Adobe Campaign Managed Services] ](../../destinations/catalog/email-marketing/adobe-campaign-managed-services.md) | Atualização dos pacotes   | A variável [!DNL Adobe Campaign Managed Services] a integração do com o Adobe Experience Platform agora oferece suporte a diferentes tipos de sincronização de público-alvo. Use o controle Selecionar tipo de sincronização para determinar se você deve exportar públicos para o Adobe Campaign ou se os públicos-alvo e seus atributos de perfil. <br> ![Novo Seletor do tipo de sincronização de seleção realçado.](/help/release-notes/2023/assets/acms-destination-export-type.png "Novo Seletor do tipo de sincronização de seleção realçado."){width="100" zoomable="yes"} |
+| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | Novo | Integrar identidades da Adobe Experience Platform no [!DNL LiveRamp Connect] para direcionar usuários em dispositivos móveis, na web aberta, em redes sociais e plataformas [!DNL CTV] usando o identificador [!DNL Ramp ID]. |
+| [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | O [!DNL Data Landing Zone] é uma interface de armazenamento de dados do [!DNL Azure Blob] provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos para fora da Platform. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar periodicamente os arquivos de dados da Adobe Experience Platform para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| Atualização do [[!DNL Amazon S3] ](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| Atualização do [[!DNL Azure Blob] ](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| Atualização do [[!DNL SFTP] ](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e é compatível com o [!BADGE  Beta]{type=Informative} |
+| Conexão com o [[!DNL Adobe Campaign Managed Services] ](../../destinations/catalog/email-marketing/adobe-campaign-managed-services.md) | Atualização dos pacotes | A integração do [!DNL Adobe Campaign Managed Services] com a Adobe Experience Platform agora é compatível com diferentes tipos de sincronização de público-alvo. Use o controle Selecionar tipo de sincronização para determinar se você deve exportar públicos-alvo para o Adobe Campaign ou os públicos-alvo e seus atributos de perfil. <br> ![Novo seletor Selecionar tipo de sincronização realçado.](/help/release-notes/2023/assets/acms-destination-export-type.png "Novo seletor Selecionar tipo de sincronização realçado."){width="100" zoomable="yes"} |
 
 {style="table-layout:auto"}
 
 **Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
 
-A versão de atualização e disponibilidade geral dos seis destinos de armazenamento na nuvem acima fornece a seguinte funcionalidade:
+A versão de atualização e disponibilidade geral dos seis destinos de armazenamento em nuvem acima fornece a seguinte funcionalidade:
 
-- Adicional [opções de nomenclatura de arquivo](/help/destinations/ui/activate-batch-profile-destinations.md#scheduling).
-- Capacidade de definir cabeçalhos de arquivos personalizados em seus arquivos exportados por meio da [etapa de mapeamento aprimorada](/help/destinations/ui/activate-batch-profile-destinations.md#mapping).
-- Capacidade de personalizar o [formatação de arquivos de dados CSV exportados](/help/destinations/ui/batch-destinations-file-formatting-options.md).
-- [!BADGE Beta]{type=Informative}[Suporte à exportação de conjuntos de dados](/help/destinations/ui/export-datasets.md).
+- [Opções de nomenclatura de arquivo](/help/destinations/ui/activate-batch-profile-destinations.md#scheduling) adicionais.
+- Capacidade de definir cabeçalhos de arquivos personalizados em seus arquivos exportados por meio da [etapa de mapeamento aprimorado](/help/destinations/ui/activate-batch-profile-destinations.md#mapping).
+- Capacidade de personalizar a [formatação de arquivos de dados CSV exportados](/help/destinations/ui/batch-destinations-file-formatting-options.md).
+- [!BADGE  Beta]{type=Informative}[Suporte à exportação de conjuntos de dados](/help/destinations/ui/export-datasets.md).
 
 
 **Correções e aprimoramentos** {#destinations-fixes-and-enhancements}
 
-- Corrigimos um problema com o destino do Marketing Cloud (API) Salesforce no qual, na etapa de mapeamento, nem todos os atributos de destino disponíveis eram retornados do Salesforce. Existe agora uma [limite superior de atributos target 2000](/help/destinations/catalog/email-marketing/salesforce-marketing-cloud-exact-target.md#mapping-considerations-example) no Salesforce que pode ser exibido.
-- Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [Seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), para que você possa rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema do Microsoft. <br> ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
+- Corrigimos um problema na etapa de mapeamento do destino do Salesforce Marketing Cloud (API) no qual todos os atributos de público alvo disponíveis eram retornados do Salesforce. Agora existe um [limite máximo de 2000 atributos de público alvo](/help/destinations/catalog/email-marketing/salesforce-marketing-cloud-exact-target.md#mapping-considerations-example) do Salesforce que podem ser exibidos.
+- Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), permitindo rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema da Microsoft. <br> ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
 
 Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
@@ -108,27 +109,27 @@ O Query Service permite usar o SQL padrão para consultar dados no data lake da 
 
 | Recurso | Descrição |
 | --- | --- |
-| Alternância do Editor de Consulta Aprimorado | O botão aprimorado Editor de consultas oferece melhor acessibilidade e suporte a vários temas. As configurações aprimoradas do editor permitem ativar temas escuros ou claros. Consulte a [documentação da](../../query-service/ui/user-guide.md#enhanced-editor-toggle) para obter mais informações. |
-| Nome de alias para estatísticas calculadas | Agora você pode fornecer um nome de alias para fazer referência descritiva aos resultados de suas estatísticas calculadas em consultas SQL. Consulte a documentação para obter informações sobre esta e outras atualizações do comando COMPUTE STATISTICS. Consulte a [documentação da](../../query-service/essential-concepts/dataset-statistics.md#alias-name) para obter mais informações. |
+| Controle de alternância aprimorado no editor de consultas | O controle de alternância aprimorado do editor de consultas oferece melhor acessibilidade e suporte a vários temas. As configurações aprimoradas do editor permitem habilitar temas escuros ou claros. Consulte a [documentação](../../query-service/ui/user-guide.md#enhanced-editor-toggle) para obter mais informações. |
+| Nome de alias para estatísticas calculadas | Agora você pode fornecer um nome de alias para criar uma referência descritiva dos resultados de suas estatísticas calculadas em consultas SQL. Consulte a documentação para obter informações sobre esta e outras atualizações do comando COMPUTE STATISTICS. Consulte a [documentação](../../query-service/essential-concepts/dataset-statistics.md#alias-name) para obter mais informações. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o Query Service, consulte a [Visão geral do Query Service](../../query-service/home.md).
+Para obter mais informações sobre o serviço de consulta, consulte a [Visão geral do serviço de consulta](../../query-service/home.md).
 
 ## Serviço de segmentação {#segmentation}
 
-[!DNL Segmentation Service] permite segmentar dados armazenados no [!DNL Experience Platform] que se relaciona a indivíduos (como clientes, clientes potenciais, usuários ou organizações) em públicos. Você pode criar públicos-alvo por meio de definições de segmento ou outras fontes da [!DNL Real-Time Customer Profile] dados. Esses públicos-alvo são configurados e mantidos de forma centralizada em [!DNL Platform]e são prontamente acessíveis por qualquer solução Adobe.
+O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos (como clientes, prospectos, usuários ou organizações) que estão armazenados na [!DNL Experience Platform] em públicos-alvo. Você pode criar públicos-alvo por meio de definições de segmento ou outras fontes a partir dos dados do [!DNL Real-Time Customer Profile]. Esses públicos-alvo são configurados e mantidos de forma centralizada na [!DNL Platform] e podem ser acessados a qualquer momento usando as soluções da Adobe.
 
 **Recursos novos ou atualizados**
 
 | Recurso | Descrição |
 | ------- | ----------- |
-| Portal de público | O Audience Portal oferece uma nova experiência de navegação para acessar, criar e gerenciar públicos no Adobe Experience Platform. No Audience Portal, você pode visualizar públicos gerados pela Platform e gerados externamente; melhorar a eficiência do trabalho por meio de filtragem, pastas e tags; criar públicos gerados pela Platform; e importar públicos gerados externamente por meio de arquivos CSV. Para obter mais informações sobre o Audience Portal, leia o [Guia da interface do usuário do serviço de segmentação](../../segmentation/ui/overview.md). |
-| Composição de público-alvo | A Composição de público-alvo fornece um espaço de trabalho fácil de usar para criar e editar públicos-alvo, usando blocos usados para representar ações diferentes. Para obter mais informações sobre Composição de público, leia a [Guia da interface do usuário da Composição de público-alvo](../../segmentation/ui/audience-composition.md). |
+| Portal de público-alvo | O Portal de público-alvo oferece uma nova experiência de navegação para acessar, criar e gerenciar públicos-alvo na Adobe Experience Platform. No Portal de público-alvo, você pode visualizar públicos-alvo gerados pela Platform e externamente, melhorar a eficiência do trabalho por meio de filtragem, pastas e tags, criar públicos-alvo gerados pela Platform e importar públicos gerados externamente por meio de arquivos CSV. Para obter mais informações sobre o Portal de público-alvo, leia o [guia da interface do serviço de segmentação](../../segmentation/ui/overview.md). |
+| Composição de público-alvo | A Composição de público-alvo fornece um espaço de trabalho fácil de usar para criar e editar públicos-alvo usando blocos para representar ações diferentes. Para obter mais informações sobre a Composição de público-alvo, leia o [guia da interface da Composição de público-alvo](../../segmentation/ui/audience-composition.md). |
 
-Para obter mais informações sobre [!DNL Segmentation Service], leia o [Visão geral da segmentação](../../segmentation/home.md).
+Para obter mais informações sobre o [!DNL Segmentation Service], consulte a [Visão geral de segmentação](../../segmentation/home.md).
 
-## Fontes {#sources}
+## Origens {#sources}
 
 A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
@@ -136,13 +137,13 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 
 | Recurso | Descrição |
 | --- | --- |
-| [!BADGE Beta]{type=Informative}[!DNL SAP Commerce] | Agora você pode usar o [[!DNL SAP Commerce] origem](../../sources/connectors/ecommerce/sap-commerce.md) para trazer os dados de cobrança da assinatura do seu [!DNL SAP Commerce] conta para Experience Platform. |
-| Compatibilidade com o [!DNL Phoenix] | Agora você pode usar o [[!DNL Phoenix] origem](../../sources/connectors/databases/phoenix.md) para trazer dados de seu [!DNL Phoenix] banco de dados para Experience Platform. |
-| Atualizações de autenticação do [!DNL Salesforce] e [!DNL Salesforce Service Cloud] | Agora você pode especificar a versão da API do [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Salesforce Service Cloud]](../../sources/connectors/customer-success/salesforce-service-cloud.md) ao autenticar uma nova conta com a interface de usuário do Experience Platform ou o [!DNL Flow Service] API. |
+| [!BADGE  Beta]{type=Informative}[!DNL SAP Commerce] | Agora você pode usar a origem do [[!DNL SAP Commerce] ](../../sources/connectors/ecommerce/sap-commerce.md) para trazer os dados de faturamento de assinatura da sua conta do [!DNL SAP Commerce] para a Experience Platform. |
+| Compatibilidade com o [!DNL Phoenix] | Agora você pode usar a origem do [[!DNL Phoenix] ](../../sources/connectors/databases/phoenix.md) para trazer dados do seu banco de dados do [!DNL Phoenix] para a Experience Platform. |
+| Atualizações de autenticação do [!DNL Salesforce] e [!DNL Salesforce Service Cloud] | Agora você pode especificar a versão da API da sua origem do [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Salesforce Service Cloud]](../../sources/connectors/customer-success/salesforce-service-cloud.md) ao autenticar uma nova conta com a interface da Experience Platform ou a API do [!DNL Flow Service]. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre fontes, leia o [visão geral das origens](../../sources/home.md).
+Para obter mais informações sobre origens, leia a [visão geral de origens](../../sources/home.md).
 
 ## Experience Data Model (XDM) {#xdm}
 
@@ -152,8 +153,8 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
-| Classe | [[!UICONTROL Perfil de cliente potencial individual do XDM]](https://github.com/adobe/xdm/pull/1758/files) | Use esta classe para trazer perfis de prospecto obtidos de casos de uso de aquisição de clientes topo de funil de fornecedores de dados. |
-| Grupo de campos | [[!UICONTROL Detalhes enriquecidos do segmento de evento]](https://github.com/adobe/xdm/pull/1754/files) | Uma lista de públicos para os quais o perfil se qualifica no momento da coleta do evento. |
+| Classe | [[!UICONTROL Perfil de cliente potencial individual do XDM]](https://github.com/adobe/xdm/pull/1758/files) | Use esta classe para atrair perfis em potencial provenientes de casos de uso de conquista de cliente do topo de funil dos fornecedores de dados. |
+| Grupo de campos | [[!UICONTROL Detalhes de segmento de evento enriquecido]](https://github.com/adobe/xdm/pull/1754/files) | Uma lista de públicos-alvo para os quais o perfil se qualifica no momento da coleta do evento. |
 
 {style="table-layout:auto"}
 
@@ -161,24 +162,23 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 | Tipo de componente | Nome | Atualizar descrição |
 | --- | --- | --- |
-| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de experimental para `stable`. |
-| Grupo de campos | [[!UICONTROL Detalhes de interação com a mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `stable` para `deprecated`. |
-| Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações detalhadas de dados de QoE]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações de dados do estado do player]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental`para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações do evento de mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações de detalhes de mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `stable` para `deprecated`. |
-| Tipo de dados | [[!UICONTROL Informações detalhadas de metadados personalizados]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações detalhadas do capítulo]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações detalhadas do Pod de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
-| Extensão (Gerenciamento de Jornada do cliente) | [[!UICONTROL Domínio]](https://github.com/adobe/xdm/pull/1756/files) | `Domain` campo adicionado a [!UICONTROL Adobe CJM ExperienceEvent - Detalhes do perfil da mensagem] para registrar o domínio do endereço de email do recipient. |
-| Extensão (Gerenciamento de Jornada do cliente) | [[!UICONTROL Nome da variante do canal]](https://github.com/adobe/xdm/pull/1753/files) | Este campo foi adicionado a [!UICONTROL Campos de entidade do AJO] para representar o nome da variante de canal. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de experimental para `stable`. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação com a mídia]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `stable` para `deprecated`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de dados de QoE]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de dados de estado do reprodutor]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações do evento de mídia]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de mídia]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `stable` para `deprecated`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de metadados personalizados]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de capítulo]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas do pod de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | O `meta:status` foi atualizado de `experimental` para `stable`. |
+| Extensão (gerenciamento de jornada do cliente) | [[!UICONTROL Domínio]](https://github.com/adobe/xdm/pull/1756/files) | O campo `Domain` foi adicionado a [!UICONTROL Adobe CJM ExperienceEvent - Detalhes do perfil de mensagem] para registrar o domínio do endereço de email do destinatário. |
+| Extensão (gerenciamento de jornada do cliente) | [[!UICONTROL Nome da variante do canal]](https://github.com/adobe/xdm/pull/1753/files) | Este campo foi adicionado aos [!UICONTROL Campos de entidade do AJO] para representar o nome da variante do canal. |
 | Extensão (Adobe Analytics) | [[!UICONTROL Valor de contexto]](https://github.com/adobe/xdm/pull/1761/files) | `Context value` foi adicionado a [!UICONTROL `Adobe Analytics ExperienceEvent Full Extension`]. |
 
 {style="table-layout:auto"}
 
 Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema de XDM](../../xdm/home.md)
-
