--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -1,7 +1,8 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de junho de 2023 da Adobe Experience Platform.
-source-git-commit: 0aafba9c2887e39f983c354a73d5544f3b0e681f
+exl-id: 8a2bf2c0-e469-42f5-b324-6acba83d5ec3
+source-git-commit: b4334b4f73428f94f5a7e5088f98e2459afcaf3c
 workflow-type: tm+mt
 source-wordcount: '1538'
 ht-degree: 100%
@@ -129,7 +130,7 @@ O Query Service permite usar o SQL padrão para consultar dados no data lake da 
 
 Para obter mais informações sobre o Query Service, consulte a [Visão geral do Query Service](../../query-service/home.md).
 
-## Fontes {#sources}
+## Origens {#sources}
 
 A Adobe Experience Platform pode assimilar dados de fontes externas e permite estruturar, rotular e aprimorar esses dados usando os serviços da Platform. É possível assimilar dados de várias fontes, como aplicativos da Adobe, armazenamento na nuvem, software de terceiros e seu sistema de CRM.
 
