Updated by task 'AUTO_TM_MT_1699893519332'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/7fcfa3cb82434f75ec2861273fd45e54a3318622

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 da Adobe Experience Platform.
 exl-id: f9fded71-8ce4-47bc-81e8-22b2482e6283
-source-git-commit: b4334b4f73428f94f5a7e5088f98e2459afcaf3c
+source-git-commit: 3217e34278f89f9992ed40159ddcfdee041d0e65
 workflow-type: tm+mt
-source-wordcount: '1804'
-ht-degree: 100%
+source-wordcount: '1828'
+ht-degree: 98%
 
 ---
 
@@ -15,14 +15,15 @@ ht-degree: 100%
 
 Atualizações dos recursos já existentes na Adobe Experience Platform:
 
-- [Serviço de catálogo](#catalog-service)
-- [Coleção de dados](#data-collection)
-- [Preparação de dados](#data-prep)
-- [Destinos](#destinations)
-- [Query Service](#query-service)
-- [Serviço de segmentação](#segmentation)
-- [Origens](#sources)
-- [Experience Data Model (XDM)](#xdm)
+- [Notas de versão da Adobe Experience Platform](#adobe-experience-platform-release-notes)
+   - [Serviço de catálogo {#catalog-service}](#catalog-service-catalog-service)
+   - [Coleção de dados {#data-collection}](#data-collection-data-collection)
+   - [Preparação de dados {#data-prep}](#data-prep-data-prep)
+   - [Destinos {#destinations}](#destinations-destinations)
+   - [Query Service {#query-service}](#query-service-query-service)
+   - [Serviço de segmentação {#segmentation}](#segmentation-service-segmentation)
+   - [Fontes {#sources}](#sources-sources)
+   - [Experience Data Model (XDM) {#xdm}](#experience-data-model-xdm-xdm)
 
 ## Serviço de catálogo {#catalog-service}
 
@@ -89,9 +90,10 @@ Para obter mais informações sobre a preparação de dados, leia a [Visão gera
 A versão de atualização e disponibilidade geral dos seis destinos de armazenamento em nuvem acima fornece a seguinte funcionalidade:
 
 - [Opções de nomenclatura de arquivo](/help/destinations/ui/activate-batch-profile-destinations.md#scheduling) adicionais.
+- Agora você pode exportar públicos-alvo como [Arquivos JSON ou Parquet](/help/destinations/ui/activate-batch-profile-destinations.md#supported-file-formats-export), além do formato CSV que já era compatível.
 - Capacidade de definir cabeçalhos de arquivos personalizados em seus arquivos exportados por meio da [etapa de mapeamento aprimorado](/help/destinations/ui/activate-batch-profile-destinations.md#mapping).
 - Capacidade de personalizar a [formatação de arquivos de dados CSV exportados](/help/destinations/ui/batch-destinations-file-formatting-options.md).
-- [!BADGE  Beta]{type=Informative}[Suporte à exportação de conjuntos de dados](/help/destinations/ui/export-datasets.md).
+- [Suporte à exportação de conjuntos de dados](/help/destinations/ui/export-datasets.md).
 
 
 **Correções e aprimoramentos** {#destinations-fixes-and-enhancements}
