Updated by task 'AUTO_TM_MT_1699937823393'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/bf041797e6a00faecf258bdb9e1c07c315ff5823

--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -62,7 +62,7 @@ Para saber mais sobre coleção de dados, leia a [visão geral da coleção de d
 
 | Funcionalidade | Descrição |
 | ----------- | ----------- |
-| Compatibilidade do espaço de trabalho com os destinos do [Adobe Target](../../destinations/catalog/personalization/adobe-target-connection.md). | Agora é possível selecionar o espaço de trabalho do Adobe Target para o qual você deseja compartilhar públicos-alvo ao configurar uma nova conexão de destino do Adobe Target. Consulte a seção [parâmetros de conexão](../../destinations/catalog/personalization/adobe-target-connection.md#parameters) para obter mais informações. Além disso, consulte o tutorial sobre a [configuração de espaços de trabalho](https://experienceleague.adobe.com/docs/target-learn/tutorials/administration/set-up-workspaces.html) no Adobe Target para obter mais informações sobre espaços de trabalho. |
+| Compatibilidade do espaço de trabalho com os destinos do [Adobe Target](../../destinations/catalog/personalization/adobe-target-connection.md). | Agora é possível selecionar o espaço de trabalho do Adobe Target para o qual você deseja compartilhar públicos-alvo ao configurar uma nova conexão de destino do Adobe Target. Consulte a seção [parâmetros de conexão](../../destinations/catalog/personalization/adobe-target-connection.md#parameters) para obter mais informações. Além disso, consulte o tutorial sobre a [configuração de espaços de trabalho](https://experienceleague.adobe.com/docs/target-learn/tutorials/administration/set-up-workspaces.html?lang=pt-BR) no Adobe Target para obter mais informações sobre espaços de trabalho. |
 
 {style="table-layout:auto"}
 
